--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
     />
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
+    <!--Header-->
     <header>Header</header>
+    <!--Main Content-->
     <main>Main Content</main>
+    <!--Footer-->
     <footer>Footer</footer>
   </body>
 </html>
