--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     <!--Main Content-->
     <main>Main Content</main>
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.faebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+    <!--Font awesome kit-->
+    <script src="https://kit.fontawesome.com/467e25aa0a.js" crossorigin="anonymous"></script>
   </body>
 </html>
