--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" name="nav-toggle" id="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li><a href="" class="active">Home</a></li>
@@ -54,13 +56,59 @@
     </header>
     <!--Main Content-->
     <main>
-        <section id="hero">
-            <div id="cover-text">
-            <h2>Love Running</h2>
-            <h3>Dublin Docklands & Phoenix Park</h3>
+      <section id="hero">
+        <div id="cover-text">
+          <h2>Love Running</h2>
+          <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
-        </section>
-        
+      </section>
+      <section id="reasons">
+        <h2>Why love running with us?</h2>
+        <div id="benefits">
+          <div id="benefits-physical">
+            <div>
+              <h3>Feel healthy <i class="fa-solid fa-heart-pulse"></i></h3>
+              <hr />
+              <p>
+                Since it improves aerobic fitness, running is a great way to
+                help improve your cardiovascular health. Plus, it burns calories
+                and can build strength.
+              </p>
+            </div>
+            <div>
+              <h3>Feel strong <i class="fa-solid fa-dumbbell"></i></h3>
+              <hr />
+              <p>
+                Running strengthens your heart by pumping blood more effectively
+                through your body.
+              </p>
+            </div>
+          </div>
+          <div id="benefits-mental">
+            <div>
+              <h3>Feel free <i class="fa-brands fa-fly"></i></h3>
+              <hr />
+              <p>
+                Physical exercise, running included, is known to release
+                endorphins in the brain. Endorphins make you more energetic,
+                more awake and, yes, happier.
+              </p>
+            </div>
+            <div>
+              <h3>Get social <i class="fa-solid fa-globe"></i></h3>
+              <hr />
+              <p>
+                When we run with others, we can run farther and faster more
+                easily. Social running can pull you out of a running funk or low
+                mood, and inspire you to try new events.
+              </p>
+            </div>
+          </div>
+          <div id="benefits-image">
+            <div id="circle-cover-bg"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--Footer-->
     <footer>
@@ -89,7 +137,8 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Youtube page (opens in a new tab)"
-            ><i class="fa-brands fa-square-youtube"></i></a>
+            ><i class="fa-brands fa-square-youtube"></i
+          ></a>
         </li>
         <li>
           <a
