--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
         <!--Main Content-->
         <main>
             <section id="signup">
-                <form method="POST" action="https://formdump.codeinstitute.net">
+                <form method="POST" action="https://formdump.codeinstitute.net" id="signup-form">
 <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
 <label for="first_name">First Name</label>
 <input type="text" name="first_name" id="first_name" class="text-input" required>
